--- a/snake-game.html
+++ b/snake-game.html
@@ -35,6 +35,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
+        //im coming
         let board = $('#the-border');
         let dir = 'top';
         document.addEventListener('keydown', function (event) {
